# sdl-demo

./: .gitmodules  CMakeLists.txt  README.md  run.sh  setup.sh
src/: CMakeLists.txt  main.cpp
